<resources>
    <string name="app_name">GeoAlarm2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="alarm_name">Name</string>
    <string name="alarm_start">Start Time</string>
    <string name="alarm_end">End Time</string>
    <string name="alarm_start_day">Start Day</string>
    <string name="alarm_end_day">End Day</string>
    <string name="alarm_save">Save</string>
    <string name="alarm_cancel">Cancel</string>
    <string name="alarm_area">Area</string>

    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>

    <string name="single_time">Single</string>
    <string name="multiple_times">Multiple</string>

    <string name="snooze">Snooze</string>
    <string name="stop_alarm">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm_pop_up">AlarmPopUpActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_alarm_ads">AlarmAdsActivity</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
