<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="6dp">


    <TextView
        android:id="@+id/alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_name" />

    <EditText
        android:id="@+id/edit_alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Name" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/textView_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_start" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start"
                android:onClick="showTimePickerDialog" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Day"
                android:onClick="showDatePickerDialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/textView_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_end" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End"
                android:onClick="showTimePickerDialog" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End Day"
                android:onClick="showDatePickerDialog" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_area" />

    <SeekBar
        android:id="@+id/seekBar_alarm_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_time"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple_times"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <include layout="@layout/fragment_weekdays"/>

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />



</LinearLayout>
